# ghostpay

./: .gitignore  Anchor.toml  CLAUDE.md  README.md
agent/: .env.example  .gitignore  ghostpay-idl.json  package.json  salaries.example.json  tsconfig.json
agent/src/: config.ts  execute.ts  index.ts  plan.ts  server.ts  state.ts  status.ts  treasury.ts
agent/src/encrypt-client/: index.ts
app/: .env.example  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/api/execute/: route.ts
app/src/app/api/plan/: route.ts
app/src/app/dashboard/: contributor-view.tsx  page.tsx  treasurer-view.tsx
app/src/components/: built-with.tsx  demo-toggle.tsx  fade-in.tsx  footer.tsx  hero.tsx  how-it-works.tsx  logo.tsx  navbar.tsx  problem.tsx  waitlist-form.tsx  wallet-pill.tsx
app/src/components/ui/: button.tsx  card.tsx  skeleton.tsx
app/src/hooks/: use-role.ts  use-vault.ts
app/src/lib/: agent-api.ts  anchor.ts  config.ts  explorer.ts  state.ts
programs/ghostpay/: Cargo.toml
programs/ghostpay/src/: lib.rs
tests/: encrypt-setup.ts  ghostpay-e2e.ts  helpers.ts  package.json  tsconfig.json
tests/encrypt-client/: index.ts
